# public/swagger.json
@@ -53,7 +53,13 @@
 				"additionalProperties": false
 			}
 		},
-		"securitySchemes": {}
+		"securitySchemes": {
+			"bearerAuth": {
+      		"type":"http",
+      		"scheme": "bearer",
+      		"bearerFormat": "JWT"
+    		}
+		}
 	},
 	"info": {
 		"title": "hello-express-mongo",
@@ -530,6 +536,58 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/api/profiles/search": {
+			"get": {
+				"operationId": "SearchProfiles",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "name",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "skills",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "education",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "certifications",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
